--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,9 @@
       <section id="explain" class="intersection">
         <div class="sideborder">
           <div class="color-box"></div>
-          <h2>O que é Empréstimo com Garantia do Saque Aniversário do FGTS?</h2>
+          <h2 class="h2 mb-5">
+            O que é Empréstimo com Garantia do Saque Aniversário do FGTS?
+          </h2>
           <p class="format-text">
             O Empréstimo com Garantia do Saque Aniversário do FGTS é uma
             modalidade de crédito que possibilita a você, que optou pelo saque
@@ -94,10 +96,10 @@
         </button>
       </section>
       <section id="know-how" class="div-img">
-        <h2>Empréstimo pessoal <span>FGTS</span></h2>
+        <h2 class="h2 fs-1">Empréstimo pessoal <span>FGTS</span></h2>
         <h4>
-          É uma <span>modalidade de empréstimo</span> que faz a antecipação de 7
-          anos do seu saque-aniversário.
+          É uma modalidade de empréstimo que faz a antecipação de 7 anos do seu
+          saque-aniversário.
           <span
             >É um dinheiro fácil e rápido para dar aquele gás na vida
             financeira.</span
@@ -105,7 +107,7 @@
         </h4>
       </section>
       <section id="benefits" class="intersection">
-        <h2>Vantagens</h2>
+        <h2 class="h2 mb-5 mt-2">Vantagens</h2>
         <article class="info-know-how">
           <span class="icon">
             <i class="fa-solid fa-dollar-sign"></i>
@@ -152,115 +154,161 @@
       </section>
       <section id="fgts-explanation">
         <h2 class="h1">
-          <span>É fácil aderir o empréstimo</span> com garantia do Saque
-          Aniversário FGTS
+          É fácil aderir o empréstimo com garantia do Saque Aniversário FGTS
         </h2>
         <h4>Em apenas 5 passos você consegue aderir a modalidade</h4>
         <div
           id="carouselExampleControls"
           class="carousel carousel-dark slide"
-          data-bs-ride="carousel"
+          data-bs-interval="false"
           style="width: 100%"
         >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="d-flex justify-content-center" style="width: 100%">
-                <img
-                  src="./images/slider1.png"
-                  alt="Celular exibindo tela de login do app do FGTS."
-                  height="320"
-                  width="220"
-                />
-              </div>
-              <div class="text-content">
-                <h2 class="h2">Acesse ou crie uma conta no App do FGTS</h2>
-                <p>
-                  Baixe o app e o acesse, para fazer login ou criar uma conta.
-                </p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="d-flex justify-content-center" style="width: 100%">
-                <img
-                  src="./images/slider2.png"
-                  alt="Celular exibindo tela de escolha para saque aniversário no app do FGTS."
-                  height="320"
-                  width="220"
-                />
-              </div>
-              <div class="text-content">
-                <h2 class="h2">Escolha a opção pelo Saque Aniversário</h2>
-                <p>
-                  Todos trabalhadores com carteira assinada, podem optar pela
-                  modalidade de Saque Aniversário.
-                </p>
-
-                <ul>
-                  <li>
-                    Leia atentamente todas as informações da tela e do
-                    <strong>"Termo de adesão"</strong>, e se estiver de acordo,
-                    ative a opção
-                    <strong>"Li e aceito os termos e condições"</strong>.
-                  </li>
-                  <li>
-                    Clique em <strong>"Optar pelo Saque Aniversário"</strong>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="d-flex justify-content-center" style="width: 100%">
-                <img
-                  src="./images/slider3.png"
-                  alt="Celular exibindo tela para autorização de consulta de saldo por instituição financeira."
-                  height="320"
-                  width="220"
-                />
-              </div>
-              <div class="text-content">
-                <h2 class="h2">Autorizar a instituição financeira</h2>
-                <p>
-                  Agora é a hora de autorizar a a instituição financeira a
-                  consultar o saldo da su conta vinculada ao app FGTS.
-                </p>
-                <ul>
-                  <li>
-                    Clique na opção
-                    <strong>"Autorizar bancos a consultarem seu FGTS"</strong>
-                    e em seguida selecione
-                    <strong>"Modalidade Saque-Aniversário"</strong>.
-                  </li>
-                  <li>
-                    Clique em <strong>"Adicionar instituição +"</strong>,
-                    procure pela instituição e confirme.
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="d-flex justify-content-center" style="width: 100%">
-                <h2 class="h2">Realizar a simulação</h2>
-                <p>
-                  Agora que já optou pelo Saque Aniversário e autorizou a
-                  instituição financeira a consultar o saldo disponível em sua
-                  conta do FGTS, você poderá determinar o valor do crédito,
-                  realizar a simulação no site ou via Whatsapp e contratar o
-                  <strong
-                    >Empréstimo com Garantia do Saque Aniversário FGTS.</strong
+          <div
+            class="carousel-inner"
+            style="color: var(--color-credfacil-primary)"
+          >
+            <div class="carousel-item active cr-item">
+              <div class="control-div d-flex justify-content-center flex-wrap">
+                <div class="width-div">
+                  <div
+                    class="d-flex justify-content-center"
+                    style="width: 100%"
                   >
-                </p>
+                    <img
+                      src="./images/slider1.png"
+                      alt="Celular exibindo tela de login do app do FGTS."
+                      height="320"
+                      width="200"
+                    />
+                  </div>
+                  <div class="text-content">
+                    <h2 class="h2 mb-5 text-start">
+                      Acesse ou crie uma conta no App do FGTS
+                    </h2>
+                    <p>
+                      Baixe o app e o acesse, para fazer login ou criar uma
+                      conta.
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div class="d-flex justify-content-center" style="width: 100%">
-                <h2 class="h2">Formalização do Contrato</h2>
-                <p>
-                  Feita a simulação e aprovado o crédito, siga os passos dos
-                  nossos atendentes para assinar os documentos da contratação.
-                  <br />
-                  Conferido os documentos, o dinheiro cairá direto em sua conta
-                  corrente, <strong>sem complicações</strong>.
-                </p>
+            <div class="carousel-item cr-item">
+              <div class="control-div d-flex justify-content-center flex-wrap">
+                <div class="width-div">
+                  <div
+                    class="d-flex justify-content-center"
+                    style="width: 100%"
+                  >
+                    <img
+                      src="./images/slider2.png"
+                      alt="Celular exibindo tela de escolha para saque aniversário no app do FGTS."
+                      height="320"
+                      width="200"
+                    />
+                  </div>
+                  <div class="text-content">
+                    <h2 class="h2 mb-3">
+                      Escolha a opção pelo Saque Aniversário
+                    </h2>
+                    <p>
+                      Todos trabalhadores com carteira assinada, podem optar
+                      pela modalidade de Saque Aniversário.
+                    </p>
+
+                    <ul>
+                      <li class="mb-2">
+                        Leia atentamente todas as informações da tela e do
+                        <strong>"Termo de adesão"</strong>, e se estiver de
+                        acordo, ative a opção
+                        <strong>"Li e aceito os termos e condições"</strong>.
+                      </li>
+                      <li>
+                        Clique em
+                        <strong>"Optar pelo Saque Aniversário"</strong>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item cr-item">
+              <div class="control-div d-flex justify-content-center flex-wrap">
+                <div class="width-div">
+                  <div
+                    class="d-flex justify-content-center"
+                    style="width: 100%"
+                  >
+                    <img
+                      src="./images/slider3.png"
+                      alt="Celular exibindo tela para autorização de consulta de saldo por instituição financeira."
+                      height="320"
+                      width="200"
+                    />
+                  </div>
+                  <div class="text-content">
+                    <h2 class="h2 mb-3">Autorizar a instituição financeira</h2>
+                    <p>
+                      Agora é a hora de autorizar a a instituição financeira a
+                      consultar o saldo da su conta vinculada ao app FGTS.
+                    </p>
+                    <ul>
+                      <li class="mb-2">
+                        Clique na opção
+                        <strong
+                          >"Autorizar bancos a consultarem seu FGTS"</strong
+                        >
+                        e em seguida selecione
+                        <strong>"Modalidade Saque-Aniversário"</strong>.
+                      </li>
+                      <li>
+                        Clique em <strong>"Adicionar instituição +"</strong>,
+                        procure pela instituição e confirme.
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item cr-item">
+              <div
+                class="d-flex justify-content-center flex-wrap"
+                style="width: 100%"
+              >
+                <div class="width-div">
+                  <h2 class="h2 mb-5" style="width: 100%">
+                    Realizar a simulação
+                  </h2>
+                  <p>
+                    Agora que já optou pelo Saque Aniversário e autorizou a
+                    instituição financeira a consultar o saldo disponível em sua
+                    conta do FGTS, você poderá determinar o valor do crédito,
+                    realizar a simulação no site ou via Whatsapp e contratar o
+                    <strong
+                      >Empréstimo com Garantia do Saque Aniversário
+                      FGTS.</strong
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item cr-item">
+              <div
+                class="d-flex justify-content-center flex-wrap"
+                style="width: 100%"
+              >
+                <div class="width-div">
+                  <h2 class="h2 mb-5" style="width: 100%">
+                    Formalização do Contrato
+                  </h2>
+                  <p>
+                    Feita a simulação e aprovado o crédito, siga os passos dos
+                    nossos atendentes para assinar os documentos da contratação.
+                    <br />
+                    Conferido os documentos, o dinheiro cairá direto em sua
+                    conta corrente, <strong>sem complicações</strong>.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -285,13 +333,16 @@
         </div>
       </section>
       <section id="questions">
-        <img
-          src="./images/logo.avif"
-          alt="Logo da Cred Fácil"
-          width="300"
-          height="300"
-        />
-        <h2>Dúvidas Frequentes?</h2>
+        <div class="img-container">
+          <img
+            src="./images/logo.avif"
+            alt="Logo da Cred Fácil"
+            width="300"
+            height="300"
+          />
+        </div>
+
+        <h2 class="h2 fs-1 mt-0">Dúvidas Frequentes?</h2>
         <section class="accordeon">
           <button class="btn-dropdown">
             <span>
