--- a/public/index.html
+++ b/public/index.html
@@ -87,13 +87,30 @@
             vinculada(s) do FGTS, anualmente, no mês de seu aniversário.
           </p>
         </div>
-        <button id="wpp-simulation">
-          <a
-            style="text-decoration: none; color: #fff"
-            href="https://wa.me/558173166645?text=Gostaria%20de%20realizar%20uma%20simulação%20de%20Empréstimo%20com%20Garantia%20do%20Saque%20Aniversário%20do%20FGTS."
-            ><i class="fa-brands fa-whatsapp"></i> Simule agora mesmo!</a
+        <article id="simulator" class="p-3 mt-3">
+          <div class="text-wpp d-flex justify-content-center flex-wrap mb-3">
+            <h2 class="h2">Simule pelo Whatsapp!</h2>
+            <p>
+              Seja atendido pela nossa equipe e consiga seu empréstimo
+              consignado.
+            </p>
+            <input
+              id="wpp-simulator-inp"
+              type="number"
+              name="wpp-simulator-inp"
+              placeholder="R$"
+            />
+          </div>
+          <form
+            class="btn-simulator-wpp"
+            action="https://wa.me/558173166645?text=Gostaria%20de%20realizar%20uma%20simulação%20de%20Empréstimo%20com%20Garantia%20do%20Saque%20Aniversário%20do%20FGTS."
+            style="width: 100%"
           >
-        </button>
+            <button id="wpp-btn" type="submit">
+              <i class="fa-brands fa-whatsapp"></i> Simule agora mesmo!
+            </button>
+          </form>
+        </article>
       </section>
       <section id="know-how" class="div-img">
         <h2 class="h2 fs-1">Empréstimo pessoal <span>FGTS</span></h2>
@@ -151,6 +168,14 @@
             anualmente direto do seu saldo FGTS.
           </p>
         </article>
+        <form
+          class="btn-container mb-3"
+          action="https://wa.me/558173166645?text=Gostaria%20de%20realizar%20uma%20simulação%20de%20Empréstimo%20com%20Garantia%20do%20Saque%20Aniversário%20do%20FGTS."
+        >
+          <button class="wpp-simulation" type="submit">
+            <i class="fa-brands fa-whatsapp"></i>&nbsp;Quero contratar!
+          </button>
+        </form>
       </section>
       <section id="fgts-explanation">
         <h2 class="h1">
@@ -159,7 +184,7 @@
         <h4>Em apenas 5 passos você consegue aderir a modalidade</h4>
         <div
           id="carouselExampleControls"
-          class="carousel carousel-dark slide"
+          class="carousel carousel-dark slide carousel-element my-md-5"
           data-bs-interval="false"
           style="width: 100%"
         >
@@ -493,6 +518,14 @@
             </p>
           </article>
         </section>
+        <form
+          class="btn-container mt-3"
+          action="https://wa.me/558173166645?text=Gostaria%20de%20realizar%20uma%20simulação%20de%20Empréstimo%20com%20Garantia%20do%20Saque%20Aniversário%20do%20FGTS."
+        >
+          <button class="wpp-simulation" type="submit">
+            <i class="fa-brands fa-whatsapp"></i>&nbsp;Fale conosco agora!
+          </button>
+        </form>
       </section>
       <a id="wpp-fixed-link" href="https://wa.me/558173166645">
         <img
@@ -504,16 +537,16 @@
       </a>
       <footer>
         <small
-          >A Geo Credi BNK – CNPJ: 22.723.882/0001-56 é uma plataforma digital
-          que atua como correspondente bancário para facilitar o processo de
-          contratação de empréstimos. Como correspondente bancário seguimos as
-          diretrizes do Banco Central do Brasil, nos termos da Resolução nº.
-          3.954, de 24 de fevereiro de 2011. Toda avaliação de crédito será
-          realizada conforme a política de crédito da Instituição Financeira
-          escolhida pelo usuário. Antes da contratação de qualquer serviço
-          através de nossos parceiros, você receberá todas as condições e
-          informações relativas ao produto a ser contratado, de forma completa e
-          transparente. <br /><br />
+          >A CREDFACIL CONSIGNADO – CNPJ: 44.764.891/0001-28 é uma plataforma
+          digital que atua como correspondente bancário para facilitar o
+          processo de contratação de empréstimos. Como correspondente bancário
+          seguimos as diretrizes do Banco Central do Brasil, nos termos da
+          Resolução nº. 3.954, de 24 de fevereiro de 2011. Toda avaliação de
+          crédito será realizada conforme a política de crédito da Instituição
+          Financeira escolhida pelo usuário. Antes da contratação de qualquer
+          serviço através de nossos parceiros, você receberá todas as condições
+          e informações relativas ao produto a ser contratado, de forma completa
+          e transparente. <br /><br />
           As taxas de juros, margem consignável e prazo de pagamento praticados
           nos empréstimos com consignação em pagamento dos Governos Federais,
           Estaduais e INSS observam as determinações de cada convênio, bem como
