--- a/public/index.html
+++ b/public/index.html
@@ -102,8 +102,8 @@
             />
           </div>
           <form
+            id="form-simulator"
             class="btn-simulator-wpp"
-            action="https://wa.me/558173166645?text=Gostaria%20de%20realizar%20uma%20simulação%20de%20Empréstimo%20com%20Garantia%20do%20Saque%20Aniversário%20do%20FGTS."
             style="width: 100%"
           >
             <button id="wpp-btn" type="submit">
@@ -536,6 +536,19 @@
         />
       </a>
       <footer>
+        <div
+          class="social-media d-flex justify-content-between pb-3"
+          style="width: 100%"
+        >
+          <div class="contact">
+            <small>Tel: (81) 3078-9996</small> <br />
+            <small>Cel: (81) 97316-6645</small> <br />
+            <small>Cel: (81) 98984-6693</small> <br />
+          </div>
+          <a href="https://www.instagram.com/credfacil_consig1/">
+            <img src="./images/instagram.png" alt="Logo instagram" />
+          </a>
+        </div>
         <small
           >A CREDFACIL CONSIGNADO – CNPJ: 44.764.891/0001-28 é uma plataforma
           digital que atua como correspondente bancário para facilitar o
