--- a/public/index.html
+++ b/public/index.html
@@ -537,17 +537,33 @@
       </a>
       <footer>
         <div
-          class="social-media d-flex justify-content-between pb-3"
+          class="social-media d-flex justify-content-between pb-5"
           style="width: 100%"
         >
           <div class="contact">
+            <h4>Contato</h4>
+            <br />
             <small>Tel: (81) 3078-9996</small> <br />
             <small>Cel: (81) 97316-6645</small> <br />
-            <small>Cel: (81) 98984-6693</small> <br />
           </div>
-          <a href="https://www.instagram.com/credfacil_consig1/">
-            <img src="./images/instagram.png" alt="Logo instagram" />
-          </a>
+          <div
+            class="social-media-icons d-flex justify-content-end flex-wrap"
+            style="width: 45%"
+          >
+            <h4 class="mb-5" style="width: 100%; text-align: right">
+              Redes Sociais
+            </h4>
+            <span style="margin-right: 20px">
+              <a href="https://www.instagram.com/credfacil_consig1/">
+                <img src="./images/instagram.png" alt="Logo instagram" />
+              </a>
+            </span>
+            <span>
+              <a href="https://www.facebook.com/profile.php?id=100063612066455">
+                <img src="./images/facebook.png" alt="Logo facebook" />
+              </a>
+            </span>
+          </div>
         </div>
         <small
           >A CREDFACIL CONSIGNADO – CNPJ: 44.764.891/0001-28 é uma plataforma
