Ajuste na logo e no texto know how

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
           <img
             src="./images/logo.avif"
             alt="Logo CredFácil"
-            width="150"
+            width="300"
             height="150"
           />
         </span>
@@ -111,8 +111,10 @@
         </article>
       </section>
       <section id="know-how" class="div-img">
-        <h2 class="h2 fs-1">Empréstimo pessoal <span>FGTS</span></h2>
-        <h4>
+        <h2 class="h2 fs-1 mb-5 mb-md-0">
+          Empréstimo pessoal <span>FGTS</span>
+        </h2>
+        <h4 class="pb-5 pb-md-0 mb-5 mb-md-0">
           É uma modalidade de empréstimo que faz a antecipação de 7 anos do seu
           saque-aniversário.
           <span
@@ -356,12 +358,13 @@
         </div>
       </section>
       <section id="questions">
-        <div class="img-container">
+        <div class="img-container py-4">
           <img
+            id="cred-logo"
             src="./images/logo.avif"
             alt="Logo da Cred Fácil"
             width="300"
-            height="300"
+            height="150"
           />
         </div>
 
