Coorrecao bug mensagens wpp

--- a/public/index.html
+++ b/public/index.html
@@ -169,8 +169,8 @@
           </p>
         </article>
         <form
+          id="want-hire"
           class="btn-container mb-3"
-          action="https://wa.me/558173166645?text=Gostaria%20de%20realizar%20uma%20simulação%20de%20Empréstimo%20com%20Garantia%20do%20Saque%20Aniversário%20do%20FGTS."
         >
           <button class="wpp-simulation" type="submit">
             <i class="fa-brands fa-whatsapp"></i>&nbsp;Quero contratar!
@@ -520,6 +520,7 @@
           </article>
         </section>
         <form
+          id="talk-with-us"
           class="btn-container mt-3"
           action="https://wa.me/558173166645?text=Gostaria%20de%20realizar%20uma%20simulação%20de%20Empréstimo%20com%20Garantia%20do%20Saque%20Aniversário%20do%20FGTS."
         >
