--- a/public/index.html
+++ b/public/index.html
@@ -522,14 +522,13 @@
         <form
           id="talk-with-us"
           class="btn-container mt-3"
-          action="https://wa.me/558173166645?text=Gostaria%20de%20realizar%20uma%20simulação%20de%20Empréstimo%20com%20Garantia%20do%20Saque%20Aniversário%20do%20FGTS."
         >
           <button class="wpp-simulation" type="submit">
             <i class="fa-brands fa-whatsapp"></i>&nbsp;Fale conosco agora!
           </button>
         </form>
       </section>
-      <a id="wpp-fixed-link" href="https://wa.me/558173166645">
+      <a id="wpp-fixed-link" href="https://wa.me/558173166645?text=Gostaria%20de%20conhecer%20mais%20sobre%20a%20CredFácil">
         <img
           src="./images/whatsapp.png"
           alt="Whatsapp Logo"
